--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,16 @@
 }
 /* /RESET */
 
+body{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.game-container{
+    max-width: 59.375rem;
+    width: 100%;
+    height: 23.75rem;
+    display: flex;
+    background-color: red;
+}
