--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,32 @@ body{
 }
 
 .game-container{
-    max-width: 59.375rem;
+    max-width: 68.75rem;
     width: 100%;
     height: 23.75rem;
+    margin:  auto;
     display: flex;
     background-color: red;
+}
+
+.game-immage{
+    width: 70%;
+    height: 100%;
+    
+}
+
+.cards{
+    width: 25%;
+    height: (100% / 5);
+    
+}
+
+.card{
+    height: 20%;
+}
+
+.game-immage img, .card img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
