--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,9 @@ body{
     height: 20%;
 }
 
+.card.border{
+    border: .1875rem solid lightcyan;
+}
 .game-immage img, .card img{
     width: 100%;
     height: 100%;
@@ -56,16 +59,16 @@ body{
     border-radius: 100%;
     border: none;
     position: absolute;
-    z-index: 999;
+    z-index: 10;
     cursor: pointer;
     left: calc(50% - 1.0938rem);
 
 }
 
 .up-card{
-    top: .9375rem;
+    top: 0
 }
 
 .down-card{
-    bottom: .9375rem;
+    bottom: 0
 }
